[FEAT] add info health endpoint and wishlist
