# app/Models/Wishlist.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\Pivot;
+
+class Wishlist extends Pivot
+{
+    protected $fillable = [
+        'meal_id',
+        'user_id',
+    ];
+
+    public function meal(): BelongsTo
+    {
+        return $this->belongsTo(Meal::class);
+    }
+
+    public function user(): BelongsTo
+    {
+        return $this->belongsTo(User::class);
+    }
+}
